--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
     "url": "https://br.linkedin.com/in/jpventura"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-flow": "^7.13.13",
+    "@babel/runtime": "^7.14.0",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-angular": "^12.1.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "flow-bin": "^0.150.1",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.4"
   },
   "keywords": [
@@ -19,6 +31,9 @@
   ],
   "private": true,
   "scripts": {
+    "flow": "./node_modules/flow-bin/cli.js",
+    "format": "./node_modules/.bin/eslint --ignore-path .gitignore --fix ./**/*.{js,ts}",
+    "lint": "./node_modules/.bin/eslint --ignore-path .gitignore ./**/*.{js,ts}",
     "prepare": "husky install"
   },
   "version": "0.0.0"
